--- a/client/templates/client/client_modules.html
+++ b/client/templates/client/client_modules.html
@@ -46,13 +46,5 @@
             </div>
         </div>
     </div>
-
-    <script>
-        function searchModules(event) {
-            const query = event.target.value.toLowerCase();
-            document.querySelectorAll('.module-card').forEach(module => {
-                module.style.display = module.querySelector('h5').innerText.toLowerCase().includes(query) ? '' : 'none';
-            });
-        }
-    </script>
+ <script src="{% static 'client/js/client_modules.js' %}"></script>
 {% endblock %}
