--- a/client/static/client/css/statistics.css
+++ b/client/static/client/css/statistics.css
@@ -46,7 +46,7 @@ body {
 
 
 .count {
-    color:white;
+    color: #2b2320;
 }
 
 .count {
@@ -55,7 +55,7 @@ body {
 }
 
 .chart-box.count {
-    background-color: #0048ffd0;
+    background-color: #f2f20557;
 }
 
 .card img {
@@ -65,7 +65,7 @@ body {
 }
 
 
-.card.sales { background: #0048FF; }
+.card.sales { background: #f2f20557; }
 .card.orders { background: #F24505; }
 .card.visitors { background: #CEE7F2; }
 
