--- a/client/static/client/css/view_user_response.css
+++ b/client/static/client/css/view_user_response.css
@@ -6,14 +6,12 @@ body {
     background: #ffffff;
 }
 
-/* Page Container */
 .content {
     flex-grow: 1;
     padding: 30px;
     margin-left: 25px;
 }
 
-/* Top Bar */
 .top-bar {
     display: column;
     align-items: center;
@@ -23,7 +21,6 @@ body {
     color: #000000;
 }
 
-/* Description Box */
 .description-box {
     background: #FCEFEA;
     padding: 15px;
@@ -32,14 +29,12 @@ body {
     font-size: 18px;
 }
 
-/* Questions Container */
 .questions-container {
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
 
-/* Question Card */
 .question-card {
     background: #f8f9fa;
     padding: 15px;
@@ -47,13 +42,11 @@ body {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-/* Question Text */
 .question-card h3 {
     margin-bottom: 10px;
     color: #333;
 }
 
-/* Choice List */
 .choice-list {
     list-style: none;
     padding: 0;
@@ -67,21 +60,19 @@ body {
     border: 1px solid #ddd;
 }
 
-/* Rating Scale */
 .rating-scale {
     font-size: 16px;
     font-weight: bold;
     color: #555;
 }
 
-/* Highlighted Rating Value */
 .selected-rating {
     font-size: 18px;
     font-weight: bold;
 }
 
 .selected-choice {
-    background-color: #007bff;
+    background-color: #f2f20557;
     color: white;
     font-weight: bold;
     border-radius: 10px;
