--- a/client/static/client/css/module_style.css
+++ b/client/static/client/css/module_style.css
@@ -69,7 +69,7 @@ body {
     background: #f8f9fa;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-left: 6px solid #73c4fd; 
+    border-left: 6px solid #F24505;
     padding: 15px;
     transition: background 0.3s ease-in-out;
 }
@@ -86,7 +86,7 @@ body {
 }
 
 .module-header:hover {
-    background: rgba(115, 196, 253, 0.2);
+    background: #f2f20557;
 }
 
 /* Title inside module header */
@@ -183,14 +183,14 @@ body {
     padding: 12px;
     margin-top: 10px;
     border-radius: 8px;
-    border-left: 5px solid #73c4fd; 
+    border-left: 5px solid#F24505;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
 }
 
 /* Exercise Title */
 .exercise-card h6 {
     font-size: 18px;
-    color: #73c4fd;
+    color: #F24505;
     font-weight: bold;
     margin-bottom: 5px;
 }
