--- a/client/templates/client/client_dashboard.html
+++ b/client/templates/client/client_dashboard.html
@@ -74,7 +74,7 @@
                         datasets: [{
                             label: 'Last Working Time',
                             data: last_work_time_data,
-                            backgroundColor: ['#ff4500', '#0044ff', '#cfe2f3', "#FD5402", "#4076FF"],
+                            backgroundColor:['#FFD580', '#35b008bf', '#f2f20557','#F24505', '#FFFDD0'],
                             borderColor: '#fff',
                             borderWidth: 1
                         }]
@@ -113,7 +113,7 @@
                         datasets: [{
                             label: 'Users Enrolled',
                             data: enrollmentData,
-                            backgroundColor: ['#ff4500', '#0044ff', '#cfe2f3', "#FD5402", "#4076FF"],
+                            backgroundColor:['#FFD580', '#35b008bf', '#f2f20557','#F24505', '#FFFDD0'],
                             borderColor: '#fff',
                             borderWidth: 1
                         }]
