--- a/client/templates/client/client_modules.html
+++ b/client/templates/client/client_modules.html
@@ -10,7 +10,7 @@
     <div class="content">
         <div class="header">
             <div class="header-left">
-                <h1>Client Modules</h1>
+                <h1>Modules</h1>
             </div>
             <div class="header-icons">
                 <input type="text" class="search-bar" placeholder="Search..." onkeyup="searchModules(event)">
