--- a/client/static/client/css/category_list.css
+++ b/client/static/client/css/category_list.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 h1 {
     font-size: 26px;
-    color: #333;
+    color: #2b2320;
     margin-bottom: 40px;
     margin-top: 30px;
 }
@@ -23,8 +23,8 @@ h1 {
 }
 
 .category-card {
-    background: #3A88F6;
-    color: white;
+    background: #f2f20557;
+    color: #2b2320;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -39,13 +39,13 @@ h1 {
 }
 
 .add-card {
-    background: #d8e4f4;
+    background: #f2f20557;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 40px;
     font-weight: bold;
-    color: #3A88F6;
+    color: #F24505;
     cursor: pointer;
     height: 220px;
     width: 100%;
@@ -97,7 +97,7 @@ h1 {
 }
 
 .add-card:hover {
-    background: #94BFF8;
+    background:#D43802;
 }
 
 .export-buttons {
