--- a/client/static/client/css/edit_questionnaire.css
+++ b/client/static/client/css/edit_questionnaire.css
@@ -6,14 +6,12 @@ body {
     background: #ffffff;
 }
 
-/* Page Layout */
 .content {
     flex-grow: 1;
     padding: 30px;
     margin-left: 20px;
 }
 
-/* Top Bar */
 .top-bar {
     display: flex;
     justify-content: space-between;
@@ -22,7 +20,6 @@ body {
     color: #F24505;
 }
 
-/* Save Button */
 .save-btn {
     background-color: #F24505;
     color: white;
@@ -185,7 +182,7 @@ body {
 
 /* Hover effect */
 .question-type-select:hover {
-    border-color: #3498db;
+    border-color: #f24505;
 }
 
 /* Focus (when clicked) */
