--- a/client/static/client/css/edit_section_style.css
+++ b/client/static/client/css/edit_section_style.css
@@ -20,7 +20,7 @@
 }
 
 h3 {
-    color: #007bff;
+    color: #dc3545;
     font-size: 20px;
 }
 
@@ -40,7 +40,7 @@ h3 {
 }
 
 .editing {
-    border: 1px solid #007bff;
+    border: 1px solid #dc3545;
     background: #f8f9fa;
     padding: 5px;
 }
