--- a/client/static/client/css/manage_exercises.css
+++ b/client/static/client/css/manage_exercises.css
@@ -57,8 +57,8 @@
 }
 
 .editing {
-    border-bottom: 2px solid #007bff;
-    background: #f0f8ff;
+    border-bottom: 2px solid #F24505;
+    background: #f2f20557;
     padding: 5px;
 }
 
