Fix adaptation to different screens in create program.

--- a/client/templates/client/create_program.html
+++ b/client/templates/client/create_program.html
@@ -83,7 +83,7 @@
             
         
             <!-- Filter Section -->
-            <div class="mb-3 d-flex align-items-center justify-content-between">
+            <div class="mb-3 d-flex flex-column flex-md-row align-items-start align-items-md-center justify-content-md-between gap-2">
                 <label class="form-label">4. Select Modules within the program:</label>
 
                 <!-- Dropdown Filter Button -->
