Fix colors in reports.

--- a/client/static/client/css/client_dashboard.css
+++ b/client/static/client/css/client_dashboard.css
@@ -64,7 +64,7 @@ body {
 
 .card.orders { 
     background: #F24505;
-    color: #2b2320;
+    color: white;
 }
 .card.visitors { 
     background: #f2f20557;
