--- a/client/static/client/css/edit_module.css
+++ b/client/static/client/css/edit_module.css
@@ -122,11 +122,11 @@ body.edit_module {
 }
 
 .save-pill {
-    background-color: #018749;
+    background-color: #F24505;
 }
 
 .save-pill:hover {
-    background-color: #00693E;
+    background-color: #D43802;
 }
 
 .add-pill {
