--- a/client/templates/client/userStatistics.html
+++ b/client/templates/client/userStatistics.html
@@ -100,10 +100,10 @@
                 });
             }
 
-            const defaultColors = ['#007bff', '#F24505'];
-            const genderColors = ['#0048FF', '#FF5400', '#4076FF', '#FD7402'];
-            const sectorColors = ['#0048FF', '#FF5400', '#4076FF', '#FD7402', '#6EA8FE', '#FFA500', '#B0C4DE'];
-            const ethnicityColors = ['#0048FF', '#FF5400', '#4076FF', '#FD7402', '#6EA8FE', '#FFA500', '#B0C4DE'];
+            const defaultColors = ['#FFD700', '#F24505'];
+            const genderColors = ['#FFD700', '#F24505', '#35b008bf', '#f2f20557'];
+            const sectorColors = ['#FFD700', '#F24505', '#f2f20557', '#0D47A1', '#D43802', '#35b008bf', '#B0C4DE'];
+            const ethnicityColors = ['#FFD700', '#F24505', '#f2f20557', '#0D47A1', '#D43802', '#35b008bf', '#B0C4DE'];
 
             if (statsData) {
                 // User Activation Chart
